tests/fail/identifiers.stderr
error: Expecting fizz
 --> tests/fail/identifiers.rs:5:15
  |
5 |         1, 2, FIZZ, 4, BUZZ, Fizz, 7, 8, not, valid, 11, fizz, 13, 14, FizzBuzz
  |               ^^^^

error: Expecting buzz
 --> tests/fail/identifiers.rs:5:24
  |
5 |         1, 2, FIZZ, 4, BUZZ, Fizz, 7, 8, not, valid, 11, fizz, 13, 14, FizzBuzz
  |                        ^^^^

error: Expecting fizz
 --> tests/fail/identifiers.rs:5:30
  |
5 |         1, 2, FIZZ, 4, BUZZ, Fizz, 7, 8, not, valid, 11, fizz, 13, 14, FizzBuzz
  |                              ^^^^

error: Expecting fizz
 --> tests/fail/identifiers.rs:5:42
  |
5 |         1, 2, FIZZ, 4, BUZZ, Fizz, 7, 8, not, valid, 11, fizz, 13, 14, FizzBuzz
  |                                          ^^^

error: Expecting buzz
 --> tests/fail/identifiers.rs:5:47
  |
5 |         1, 2, FIZZ, 4, BUZZ, Fizz, 7, 8, not, valid, 11, fizz, 13, 14, FizzBuzz
  |                                               ^^^^^

error: Expecting fizz_buzz
 --> tests/fail/identifiers.rs:5:72
  |
5 |         1, 2, FIZZ, 4, BUZZ, Fizz, 7, 8, not, valid, 11, fizz, 13, 14, FizzBuzz
  |                                                                        ^^^^^^^^
